references up to third section

--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -1,6 +1,4 @@
-We have shown how the gravitational waves are obtained from the Einstein's field equation. 
-By using the transverse traceless gauge we introduced crucial semplifications. 
-We want now to explain the important physical consequences of the theoretical results obtained in the previous part.
+We want now to explain the important physical consequences of the theoretical results developed in the previous section.
 Throughout the next sections we will use the linearized theory of gravitatinal waves and we consider our metric to be in the TT gauge.
 %%in the second section we giva a coordinate-independent measure of the gravitational wave effects.
 \subsection{Free particles and detection principles}
@@ -35,8 +33,9 @@ However, we recall from the TT gauge that
 h^{\T}_{0 \alpha} = 0 \qquad  \qquad h^{\T}_{\mu \nu} = \bar{h}^{\T}_{\mu \nu} 
 \]
 for all $\alpha$. Hence, the initial acceleration of the particle is zero and a free particle, initally at rest, will remain at rest indefinitely.\\
-In this constext ''being at rest'' means that the coordinates of the particle do not change, so the TT gauge is a good choice of coordinate. As the gravitational waves propagates, the coordinate system moves with the ripples of the spacetime, in order to keep the particle in the initial position. \\
-In the TT gauge free falling bodies are not influenced by  GWs, and their coordinate separation is constant. However, the proper separation is not constant, so let us calculate it.\\
+In this constext ''being at rest'' means that the coordinates of the particle do not change, so the TT gauge is a good choice of coordinate. As the gravitational waves propagates, the coordinate system moves with the ripples of the spacetime, in order to keep the particle in the initial position.
+In the TT gauge free falling bodies are not influenced by  GWs, and their coordinate separation is constant \cite{martin_notes}.\\
+However, the proper separation is not constant, so let us calculate it.\\
 Consider two free falling test particles located at $z=0$ and separated on the x axis by a coordinate distance $L_c$. We still consider a plane wave in the TT gauge propagating in the z direction.\\
 The proper distance between the particles is
 \bea
@@ -67,7 +66,7 @@ So, the accumulated phase shift in each arm will be
 \delta \phi \sim 100 \dfrac{4 \pi \delta L}{\lambda}
 \]
 where $\lambda$ is the wavelength and $\delta L$ is the distance the mirror moves relative to the beam splitter.
-This phase shift can be measured at the photodiode to an accuracy that is governed by the light’s photon shot noise $\sim 1/\sqrt{N}$, where N is the number of photons that enter the interferometer from the laser.
+This phase shift can be measured at the photodiode to an accuracy that is governed by the light’s photon shot noise $\sim 1/\sqrt{N}$, where N is the number of photons that enter the interferometer from the laser \cite{thorne_gravitational_1995}.%ref thorne
 %%
 %%
 %%
