--- a/latex_thesis/shared/preamble.tex
+++ b/latex_thesis/shared/preamble.tex
@@ -23,6 +23,12 @@
 %\whenindex{b}{\beta}{}
 %\whenindex{g}{\gamma}{}
 
+%% style fo the sections
+% format sections
+\usepackage{titlesec}
+\titleformat{\section}[block]
+{\Large\bfseries}
+{\thesection}{0.5em}{}
 
 
 \usepackage{etoolbox}
