--- a/latex_thesis/einstein_eq/einstein_eq_gw.tex
+++ b/latex_thesis/einstein_eq/einstein_eq_gw.tex
@@ -1,18 +1,17 @@
-Albert Einstein developed the General Theory of Relativity between and 1907 and 1917, creating a new tool to observe the universe. 
-The General Theory of Relativity has changed the way we describe and study the gravitational phenomena. 
-In particular, the new theory of gravitation was not only able to solve unexplained observations, as for instance, anomalies in the newtonian description of planets' orbits as Mercury, but it also predictied new  phenomena such as gravitational time dilation, gravitational lensing and gravitational waves.
-One of the most important test of the General Theory of Relativity was the discovery of the gravitational waves (GW). %cite and comment the two nobel prices
-\\
+Solving the Einstein's field equation is a mathematically complicated problem, because in general it is difficult to find solutions to the field equations which are non-linear    \cite{weinsteinEinsteinDiscoveryGravitational2016}.
+Therefore, we will obtain the gravitational wave solutions using the weak field linearized approximation and we will discuss the mathematical constraints that lead to the two radiative degrees of freedom of the Einsten's feild equation.\\
+
 \subsection{Linearized Einstein's field equation}
-The Einstein's field equation represents how the geometry of space-time is related to the presence of masses and energy:
+The Einstein's field equation is a tensor equation that represents how the geometry of spacetime is related to the presence of masses and energy:
 \begin{equation}
 \label{einstein_eq}
-G_{\mu \nu} \equiv R_{\mu \nu} - \dfrac{1}{2} \,  g_{\mu \nu} \, R =\dfrac{8 \, \pi \, G}{c^4}  \, T_{\mu \nu}
+G_{\mu \nu} \equiv R_{\mu \nu} - \dfrac{1}{2} \,  g_{\mu \nu} \, R =8 \, \pi \, T_{\mu \nu}
 \end{equation}
-On the right hand side we have the energy-momentum tensor $T_{\mu \nu}$, which is interpreted as the flux of four momentum $p^\mu$ accross a surface of constant $x^\nu$, and $G=6.67408\times 10^{-11} \, \newton \usk \metre^2 \usk \kilogram^{-2}$ and $c=299\,792\,458 \,\metre \per \second$ that are respectively the Newton constant of gravitation and the speed of light. 
+On the right hand side we have the energy-momentum tensor $T_{\mu \nu}$ (or stress-energy tesnor), which is interpreted as the flux of four momentum $p^\mu$ accross a surface of constant $x^\nu$. 
 On the left hand side the Einstein tensor $G_{\mu \nu}$ includes a measure of the curvature of spacetime through the Ricci tensor $R_{\mu \nu}$, the Ricci scalar $R = R_{\mu \nu} g^{\mu \nu} $ and the metric $g_{\mu \nu}$. \\
-In order to solve the Einstein's equation we will make assumptions on the metric tensor $g_{\mu \nu}$ and we will derive the Einstein tensor $G_{\mu \nu}$ going through the following steps:
+In order to solve the Einstein's equation we will make use of the weak field linearized approximation on the metric tensor $g_{\mu \nu}$ and we will derive the Einstein tensor $G_{\mu \nu}$ going through the following steps:
 \begin{itemize}
+
 \item[(a)] Calculate the Christoffel symbol
 \begin{equation}
 \label{christoffel_symbol}
@@ -49,15 +48,15 @@ R=\eta^{\mu \nu} R_{\mu \nu} = :R^{\mu} _\mu:
 
 \end{itemize}
 
-$G_{\mu \nu}$ and $T_{\mu \nu}$ are symmetric tensors because $g_{\mu \nu}$ is symmetric as well.
+$G_{\mu \nu}$ and $T_{\mu \nu}$ are symmetric tensors, since $g_{\mu \nu}$ is symmetric.
 So the Einstein's field equation is a set of non-linear second-order partial differential equations with $10$ linearly independent variables. \\
-We show that the equation(\ref{einstein_eq}) leads to gravitational wave solutions if we consider a weak gravitational field, where the spacetime is nearly flat. 
-Therefore, we assume the metric tensor $g_{\mu \nu}$ to be equal to the Minkwoski metric $\eta=\text{diag}(-1,+1,+1,+1)$ plus a small perturbation $h_{\mu \nu}$ :
+We show that the equation(\ref{einstein_eq}) leads to gravitational wave solutions if we use the \textbf{weak field linearized approximation}, wheich means that we treat the spacetime as nearly flat. 
+Therefore, we assume the metric tensor $g_{\mu \nu}$ to be equal to the Minkwoski metric $\eta=\text{diag}(-1,+1,+1,+1)$ plus a small metric perturbation $h_{\mu \nu}$ :
 \begin{equation}
 \label{metric}
 g_{\mu \nu} = \eta_{\mu \nu} + h_{\mu \nu}
 \end{equation}
-where perturbation is symmetric and $\abs{h_{\mu \nu}}\ll 1$ for all $\mu$ and $\nu$. \\
+where the metric perturbation is symmetric and $\abs{h_{\mu \nu}}\ll 1$ for all $\mu$ and $\nu$. \\
 The metric $g_{\mu \nu}$ is also used to lower and raise indeces, however, in linearized theory we consider only the first order approximation in $h_{\mu \nu}$. So, it is possible to raise and lower indeces using the Minkoswkian metric $\eta_{\mu \nu}$.\\ % we can add the estimation of the swarzschild metric the correction at the sun surface h - 10^-6
 Taking into account the mentioned approximations we follow the described procedure to calculate the so-called linearized Einstein's field equation.
 The Christoffel symbol is obtained keeping up to the first order in the perturbation $h_{\mu \nu}$
@@ -72,7 +71,7 @@ The Christoffel symbol is obtained keeping up to the first order in the perturba
 \partial_\rho h _{\beta \gamma}
 ) 
 \]
-The Riemann curvature tensor is 
+Thus, the Riemann curvature tensor becomes 
 \setlength{\jot}{10pt}
 \begin{eqnarray}
 :R^\mu _{\beta \gamma \de }: &=&  \notag
@@ -190,7 +189,7 @@ R_{\beta \nu} &=
 )
 \end{aligned}
 \end{equation*}
-If we contract the above tensor we obtain
+And contracting the above tensor, we obtain
 \begin{equation*}
 \begin{aligned}
 R &=
@@ -238,7 +237,6 @@ The linearized Einstein's field equation is
 \label{linear_einstein_eq}
 \square \bar{h}_{\beta \nu} = - 16 \pi\,  T_{\beta \nu} 
 \end{equation}
-we will solve the above equation with individual approximations in section(), whereas we work in vacuum.
 The energy-momentumn tensor $T_{\beta \nu}$ is null in vacuum so the linearized Einstein's equation in vacuum assumes the form of the wave equation in a tensorial form
 \begin{equation}
 \label{wave_equation}
@@ -252,22 +250,21 @@ The simplest solution to the linearized Einstein's equation(\ref{wave_equation})
 where $A_{\beta \nu}$ is called \textbf{amplitude tensor} and it is symmetric, since $\bar{h}_{\mu \nu}$ is symmetric.\\
 Substitution of the plane wave solution into equation(\ref{wave_equation}) implies that $k_{\alpha} k^{\alpha} =0$, so $k^{\alpha}$ is a null four vector. 
 Therefore, the plane wave solution is a gravitational wave which travels at the speed of light in the spatial direction $\vb{k} = (k^{1},k^{2},k^{3})/k^{0}$ and with frequency $\omega=k^{0} $, i.e. $\bar{h}_{\beta \nu} = A_{\beta \nu} \, \exp\qty[i\, (\vb{k} \cdot \vb{x} - \omega t)]$.
-Furthermore, any $\bar{h}_{\mu \nu}$ satisfying the linearized Einstein's field equation(\ref{wave_equation}) in vacuum describes a \textbf{gravitational wave} propagating at the speed of light, and it can be Fourier-expanded as a superposition of plane waves.
- 
+Furthermore, any $\bar{h}_{\mu \nu}$ satisfying the linearized Einstein's field equation(\ref{wave_equation}) in vacuum describes a \textbf{gravitational wave} propagating at the speed of light, and it can be Fourier-expanded as a superposition of plane waves.\\
 
 \subsection{Gauge transformations and GW polarizations}
-A \textbf{gauge transformation} in linearized theory is defined as a transformation of the perturbation $h_{\mu \nu}$ into a new metric perturbation $h'_{\mu \nu}$
+A \textbf{gauge transformation} in linearized theory is defined as a transformation of the perturbation $h_{\mu \nu}$ into a new metric perturbation $h'_{\mu \nu}$, that satisfies
 \begin{equation}
 \label{gauge_transf}
 h' _{\mu \nu} = h_{\mu \nu} + \partial_\mu \xi _{\nu} + \partial_\nu \xi _{\mu}
 \end{equation}
 for a given vector field $\xi^\mu$.
-Gauge transformations are particularly important because they leave the Riemann curvature tensor unchanged (up to the first order in $h_{\mu \nu}$), indeed, the physical spacetime is unchanged. 
+Gauge transformations are particularly important because they leave the Riemann curvature tensor unchanged (up to the first order in $h_{\mu \nu}$), such that, the physical spacetime is unchanged (a simple proof can be found in \cite{carroll_spacetime_2003}). 
 The invariance of the curvature under such transformations is analogous to the traditional gauge invariance of electromagnetism.\\
 Assuming that the Einstein's field equation(\ref{linear_einstein_eq}) are valid everywhere the metric perturbation $h_{\mu \nu}$ contains: gauge degrees of freedom; physical, radiative degrees of freedom; and physical, non-radiative degrees of freedom tied to the matter source of the GW. \\
- It is possible to show that the linearized Einstein's equation can be written as 5 Poisson-type quations, plus a wave equation for the transverse-traceless components of the metric perturbation, which represents the radiative degrees of freedom.\\%[ref] 
+ It is possible to show that the linearized Einstein's equation can be written as 5 Poisson-type quations, plus a wave equation for the transverse-traceless components of the metric perturbation, which represents the radiative degrees of freedom \cite{flanagan_basics_2005,carroll_spacetime_2003}.\\
  Neverthless this procedure will manifestly demonstrate that the radiative degrees of freedom in spacetime are two, it is a cumbersome and long derivation.
-Instead, we ignore the degrees of freedom tied to the matter and we consider only solutions of equation(\ref{wave_equation}):
+Instead, we ignore the degrees of freedom tied to the matter setting $T_{\mu \nu} =0$ and we analyze only plane wave solutions of equation(\ref{wave_equation}):
 \[
 \bar{h}_{\mu \nu} = A_{\mu \nu} \, \exp\qty(i\, k_{\alpha} x^{\alpha})
 \]
@@ -325,7 +322,7 @@ The amplitude tensor $A_{\mu \nu}$ and the four vector $k^{\mu}$ are orthogonal.
 \item[c)] One component of the aplitude tensor can be eliminated selecting $\xi_{\mu} = C_{\mu} \exp[i k_{\alpha} x^{\alpha}]$ so that $A^{\mu} _{\mu} = 0$.
 
 \end{itemize}
-This means that we have suffecient freedom to fix the values of 8 components of $A_{\mu \nu}$ from a), b) and c), hence, reducing the number of independent component from 10 to 2.
+This means that we have suffecient freedom to fix the values of 8 components of $A_{\mu \nu}$ from a), b) and c), hence, reducing the number of independent component from 10 to 2 \cite{bishop_extraction_2016}.
 Note that $\bar{h} ^{\T} _{\mu \nu}= h^{\T} _{\mu \nu}$ from c).
 \\
 What does the TT gauge tell us about gravitational radiation ?\\
@@ -370,7 +367,7 @@ h_{\times} =  A^{\T} _{12} \cos \qty(\omega(t-z))
 $h_{+}$ and $h_{\times}$ are the two independent polarizations of a gravitational wave and they completely characterize the gravitational wave solution. 
 We finally found that the radiative degrees of freedom are only two and they are represented by $h_{+}$ and $h_{\times}$. \\
 
-Generally, within any finite vacuum region it is always possible to find a gauge which is locally transverse and traceless, that is, a guage which satisfies the following general conditions
+Generally, within any finite vacuum region it is always possible to find a gauge which is locally transverse and traceless \cite{flanagan_basics_2005}, that is, a guage which satisfies the following general conditions
 \bea
 h_{0 \nu} ^{\T} = 0 \\
 \eta ^{\mu \nu} h_{\mu \nu} ^{\T} =0 \\
